--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,16 +1,173 @@
 </div><!-- /.container -->
-
-
 </div> <!-- /.page-content -->
 <footer class="page__footer footer">
   <div class="container">
+    <div class="footer__menus">
+      <div class="footer__menu block-footer-menu">
+        <div class="block-footer-menu__title">
+          Коллекции мебели
+        </div>
+        <ul class="block-footer-menu__menu footer-menu list--clear">
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Верди</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Элбург</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Паола</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Венето</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Британия</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Милана</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия LIRONA</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия LAURA</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Мальта</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Авиньон</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия OKAERI</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Серия Бали</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__menu block-footer-menu">
+        <div class="block-footer-menu__title">
+          Каталог
+        </div>
+        <ul class="block-footer-menu__menu footer-menu footer-menu--catalog list--clear">
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Спальные комплекты</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Гостинные</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Прихожие</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Столы и стулья</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Кровати</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Матрасы</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Комоды</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Тумбы</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Кухни</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__menu block-footer-menu">
+        <div class="block-footer-menu__title">
+          Покупателям
+        </div>
+        <ul class="block-footer-menu__menu footer-menu footer-menu--customer list--clear">
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">О компании</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Материалы</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Доставка и оплата</a>
+          </li>
+          <li class="footer-menu__item">
+            <a href=""
+               class="footer-menu__link">Контакты</a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+    <div class="footer__main ">
+      <a href=""
+         class="footer__logo logo">
+        <svg class="logo__image"
+             width="228"
+             height="51">
+          <use xlink:href="img/spritemap.svg#sprite-logo-2"></use>
+        </svg>
+      </a>
+      <div class="footer__contacts">
+        <div class="footer__phones phones-footer">
+          <a href="tel:+74993488391"
+             class="phones-footer__item">
+            <span>8 (499)</span> 348-83-91
+          </a>
+          <a href="tel:+74993488391"
+             class="phones-footer__item">
+            <span>8 (499)</span> 348-83-91
+          </a>
+          <a href="mailto:example@gmail.com "
+             class="footer__mail">example@gmail.com</a>
+          <div class="footer__dev">
+            Разработка сайта - <a href="https://craftsol.ru">craftsol</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer__info">
+      <div class="footer__oferta">
+        Информация, представленная на сайте носит информационный характер и не является публичной офертой. Работая с этим сайтом, вы даете свое согласие на использование файлов cookie.
+      </div>
+      <div class="footer__copy">
+        2005 - 2020 &copy; Интернет-магазин "Интерьер". <br>
+        Все права защищены.
+      </div>
+    </div>
 
   </div>
-  </div>
+
 
 </footer>
 </div><!-- /.page -->
-
 </body>
 
 </html>
