--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -48,7 +48,7 @@
            class="header__logo logo">
           <svg class="logo__image"
                width="228"
-               height="40">
+               height="51">
             <use xlink:href="img/spritemap.svg#sprite-logo"></use>
           </svg>
           <span class="logo__text">Экологичная мебель из натурального дерева</span>
@@ -69,13 +69,13 @@
           </div>
         </div>
         <div class="header__phones phones-block">
-          <a href="tel:+79991234567"
+          <a href="tel:+ё74993488391"
              class="phones-block__item">
-            <span>8 (999)</span> 123-45-67
+            <span>8 (499)</span> 348-83-91
           </a>
-          <a href="tel:+79991234567"
+          <a href="tel:+74993488391"
              class="phones-block__item">
-            <span>8 (999)</span> 123-45-67
+            <span>8 (499)</span> 348-83-91
           </a>
         </div>
         <div class="header__personal-block personal-block">
@@ -169,6 +169,6 @@
 
 
   </header>
-
-  <div class="page-content">
+<!--  page-content--front-page - this class only front page-->
+  <div class="page-content page-content--front-page">
         <div class="container">
