--- a/src/scss/includes/buttons.scss
+++ b/src/scss/includes/buttons.scss
@@ -1,44 +1,44 @@
 button {
-  background-color : transparent;
-  border           : none;
-  cursor           : pointer;
   margin           : 0;
-  outline          : none;
   padding          : 0;
+  cursor           : pointer;
+  border           : none;
+  outline          : none;
+  background-color : transparent;
 
 }
 
 
 .btn--clear {
-  background      : none;
-  border          : none;
-  cursor          : pointer;
-  display         : inline-block;
   line-height     : inherit;
+  display         : inline-block;
   margin          : 0;
-  outline         : none;
   padding         : 0;
+  cursor          : pointer;
   text-decoration : none;
+  border          : none;
+  outline         : none;
+  background      : none;
 
 }
 
 .btn {
-  border         : 1px solid rgb(236, 98, 31);
-  border-radius  : 100px;
-  font-size      : 15px;
-  font-style     : normal;
-  font-weight    : bold;
-  padding        : 20px 42px;
-  text-align     : center;
-  text-transform : uppercase;
-  transition     : all 0.3s;
+  font-size     : 14px;
+  font-weight   : bold;
+  font-style    : normal;
+  line-height   : 1.2142;
+  padding       : 10px 15px;
+  transition    : all 0.3s;
+  text-align    : center;
+  border        : 1px solid #00cc52;
+  border-radius : 5px;
 
 
   &:hover,
   &:active,
   &:focus {
-    background-color : transparent;
     color            : #000;
+    background-color : transparent;
 
   }
 
@@ -50,13 +50,13 @@ button {
     color : #fff;
   }
 
-  &--orange {
-    background-color : #ec621f;
+  &--green {
+    background-color : #00cc52;
 
     &:hover,
     &:active,
     &:focus {
-      color            : #ec621f;
+      color : #00cc52;
 
     }
   }
