--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -6,8 +6,9 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible"
         content="ie=edge">
-<!--  сделать шрифты локальными-->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <!--  сделать шрифты локальными-->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;600;700;800&display=swap"
+        rel="stylesheet">
   <title>Document</title>
 
 </head>
@@ -155,11 +156,9 @@
               <a href=""
                  class="catalog-menu__link catalog-menu__link--sale">РАСПРОДАЖА</a>
             </li>
-            <li class="catalog-menu__item">
+            <li class="catalog-menu__item catalog-menu__item--more">
               <button type="button"
-                      class="catalog-menu__btn">
-
-              </button>
+                      class="catalog-menu__btn"><span></span></button>
             </li>
           </ul>
         </nav>
@@ -169,6 +168,6 @@
 
 
   </header>
-<!--  page-content--front-page - this class only front page-->
+  <!--  page-content--front-page - this class only front page-->
   <div class="page-content page-content--front-page">
-        <div class="container">
+    <div class="container">
