--- a/src/scss/includes/vars.scss
+++ b/src/scss/includes/vars.scss
@@ -1,5 +1,7 @@
-$mainFontSize   : 16px;
-$mainLineHeight : 1.6;
-$mainFontFamily : 'Montserrat Alternates', sans-serif;
+$mainFontSize        : 16px;
+$mainLineHeight      : 1.6;
+$mainFontFamily      : 'Montserrat Alternates', sans-serif;
 $secondaryFontFamily : 'Lato', sans-serif;
+
+$contentWidth        : 1140px;
 
