--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -56,7 +56,7 @@ a {
   position  : relative;
   flex      : 0 0 auto;
   width     : 100%;
-  max-width : 1100px;
+  max-width : $contentWidth;
   margin    : 0 auto;
   padding   : 0 15px;
 
@@ -132,6 +132,36 @@ a {
 .swiper-pagination-bullet-active {
   background-color : #36393a
 }
+.swiper-button-prev,
+.swiper-button-next {
+  width: 35px;
+  height : 36px;
+  background-color: #00cc52;
+  cursor : pointer;
+  background-repeat : no-repeat;
+  background-position : center;
+  position : absolute;
+  top : 50%;
+  margin-top : -18px;
+  z-index : 999;
+
+  &:active,
+  &:focus,
+  &:hover {
+    background-color: #07c353;
+  }
+}
+.swiper-button-prev {
+  border-radius : 5px 0 0 5px;
+  background-image : url(../img/svg/slider-arrow-left.svg);
+  left : -50px;
+}
+
+.swiper-button-next {
+  border-radius: 0 5px 5px 0;
+  background-image : url(../img/svg/slider-arrow-right.svg);
+  right : -50px;
+}
 
 
 .block {
@@ -175,30 +205,7 @@ a {
   }
 }
 
-.swiper-button-prev,
-.swiper-button-next {
-  width: 35px;
-  height : 36px;
-  background-color: #00cc52;
-  cursor : pointer;
-  background-repeat : no-repeat;
-  background-position : center;
 
-  &:active,
-  &:focus,
-  &:hover {
-    background-color: #07c353;
-  }
-}
-.swiper-button-prev {
-  border-radius : 5px 0 0 5px;
-  background-image : url(../img/svg/slider-arrow-left.svg);
-}
-
-.swiper-button-next {
-  border-radius: 0 5px 5px 0;
-  background-image : url(../img/svg/slider-arrow-right.svg);
-}
 
 
 .products-slider {
