--- a/src/scss/views/index.scss
+++ b/src/scss/views/index.scss
@@ -2,11 +2,28 @@
   // .main-page__collections
   &__collections {
   }
+
   // .main-page__popular-categories
   &__popular-categories {
   }
+
   // .main-page__hits
   &__hits {
+  }
+
+  // .main-page__advantages
+  &__advantages {
+    width       : 100vw;
+    margin-left : calc((100vw - #{$contentWidth}) / -2);
+  }
+
+  // .main-page__about
+  &__about {
+  }
+  // .main-page__works
+  &__works {
+    width       : 100vw;
+    margin-left : calc((100vw - #{$contentWidth}) / -2);
   }
 }
 
@@ -114,31 +131,145 @@
 }
 
 
-
 .popular-categories-block {
   // .popular-categories-block__title
   &__title {
 
   }
+
   // .popular-categories-block__inner
   &__inner {
   }
+
   // .popular-categories-block__item
   &__item {
   }
 }
 
 
-
-
 .hits-block {
   // .hits-block__title
   &__title {
   }
+
   // .hits-block__inner
   &__inner {
   }
+
   // .hits-block__item
   &__item {
+  }
+}
+
+
+.advantages-block {
+  background-color : #00cc52;
+
+
+  // .advantages-block__inner
+  &__inner {
+    display         : flex;
+    align-items     : flex-end;
+    justify-content : space-around;
+    max-width       : 1070px;
+    margin          : 0 auto;
+    padding         : 30px 0;
+  }
+
+  // .advantages-block__item
+  &__item {
+  }
+}
+
+.item-advantage {
+  text-align : center;
+
+
+  // .item-advantage__icon
+  &__icon {
+    display : inline-block;
+
+  }
+
+  // .item-advantage__text
+  &__text {
+    font-size   : 14px;
+    font-weight : 600;
+    margin-top  : 12px;
+    color       : #fff;
+  }
+}
+
+
+.about-block {
+  // .about-block__inner
+  &__inner {
+    display : flex;
+  }
+
+  // .about-block__img
+  &__img {
+    flex : 0 0 auto;
+    margin-right : 55px;
+    position : relative;
+
+    &::after {
+      content : '';
+      position : absolute;
+      top : 15px;
+      right : -15px;
+      bottom : - 15px;
+      left : 15px;
+      border: 4px solid #FEB618;
+    }
+  }
+
+  // .about-block__info
+  &__info {
+  }
+
+  // .about-block__title
+  &__title {
+    font-size   : 24px;
+    font-weight : bold;
+    color       : #161616;
+  }
+
+  // .about-block__text
+  &__text {
+    font-family : 'Lato', sans-serif;
+    font-size   : 16px;
+    color       : #454545;
+  }
+}
+
+
+
+.works-block {
+  // .works-block__inner
+  &__inner {
+    display : flex;
+  }
+  // .works-block__item
+  &__item {
+    overflow : hidden;
+
+
+    > img {
+      display : block;
+      width : 100%;
+      transition : transform .3s;
+    }
+
+    &:hover {
+      >img {
+        transform : scale(1.1);
+      }
+    }
+  }
+}
+.reviews-block {
+  // .reviews-block__title
+  &__title {
   }
 }
