--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -152,15 +152,27 @@
               <a href=""
                  class="catalog-menu__link">Кухни</a>
             </li>
-            <li class="catalog-menu__item">
+
+          </ul>
+
+          <button type="button" data-js="toggle-sale-menu"
+                  class="header__sale-btn menu-sale-btn">Распродажа <span></span></button>
+          <ul class="header__sale-menu sale-menu list--clear">
+            <li class="sale-menu__item">
               <a href=""
-                 class="catalog-menu__link catalog-menu__link--sale">РАСПРОДАЖА</a>
-            </li>
-            <li class="catalog-menu__item catalog-menu__item--more">
-              <button type="button"
-                      class="catalog-menu__btn"><span></span></button>
+                 class="sale-menu__link">
+                <svg class="sale-menu__icon"></svg>
+                Коллекции
+              </a>
+              <ul class="sale-menu__sub sale-sub-menu list--clear">
+                <li class="sale-sub-menu__item">
+                  <a href=""
+                     class="sale-sub-menu__link">Коллекции </a>
+                </li>
+              </ul>
             </li>
           </ul>
+
         </nav>
       </div>
 
