--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -121,16 +121,18 @@ a {
 
 .swiper-pagination-bullet {
   display          : inline-block;
-  width            : 12px;
-  height           : 12px;
-  margin           : 0 12px;
+  width            : 8px;
+  height           : 8px;
+  margin           : 0 9px;
   vertical-align   : bottom;
   border-radius    : 50%;
-  background-color : #ced0d1
+  border: 1px solid #B3B3B3;
 }
 
 .swiper-pagination-bullet-active {
-  background-color : #36393a
+  box-shadow : 0 0 0 2px #000;
+  background-color : #000;
+  border: none;
 }
 .swiper-button-prev,
 .swiper-button-next {
