--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -35,7 +35,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection--big">
         <div class="item-collection__title item-collection__title--big">Серия Верди</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/1.jpg"
+          <img src="uploads/collections/1.jpg"
                alt="">
         </div>
       </a>
@@ -43,7 +43,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection">
         <div class="item-collection__title item-collection__title">Серия Паола</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/2.jpg"
+          <img src="uploads/collections/2.jpg"
                alt="">
         </div>
       </a>
@@ -51,7 +51,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection">
         <div class="item-collection__title item-collection__title">Серия Авиньон</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/3.jpg"
+          <img src="uploads/collections/3.jpg"
                alt="">
         </div>
       </a>
@@ -59,7 +59,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection">
         <div class="item-collection__title item-collection__title">Серия Милана</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/4.jpg"
+          <img src="uploads/collections/4.jpg"
                alt="">
         </div>
       </a>
@@ -67,7 +67,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection">
         <div class="item-collection__title item-collection__title">Серия Бали</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/5.jpg"
+          <img src="uploads/collections/5.jpg"
                alt="">
         </div>
       </a>
@@ -75,7 +75,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection">
         <div class="item-collection__title item-collection__title">Серия OKAERI</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/6.jpg"
+          <img src="uploads/collections/6.jpg"
                alt="">
         </div>
       </a>
@@ -83,7 +83,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection">
         <div class="item-collection__title item-collection__title">Серия LIRONA</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/7.jpg"
+          <img src="uploads/collections/7.jpg"
                alt="">
         </div>
       </a>
@@ -91,7 +91,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection">
         <div class="item-collection__title item-collection__title">Серия LAURA</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/8.jpg"
+          <img src="uploads/collections/8.jpg"
                alt="">
         </div>
       </a>
@@ -99,7 +99,7 @@ title: "Заголовок | Проект",
          class="collections-block__item item-collection item-collection">
         <div class="item-collection__title item-collection__title">Серия Мальта</div>
         <div class="item-collection__image">
-          <img src="/uploads/collections/9.jpg"
+          <img src="uploads/collections/9.jpg"
                alt="">
         </div>
       </a>
@@ -836,7 +836,7 @@ title: "Заголовок | Проект",
           </a>
         </div>
         <div class="item-review__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis nisl euismod euismod pharetra. Duis molestie egestas luctus. Donec nec efficitur quam. Morbi pellentesque euismod nisi sed laoreet. Nulla ac pulvinar lacus,  id dignissim arcu. Integer aliquet arcu a dignissim mollis.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis nisl euismod euismod pharetra. Duis molestie egestas luctus. Donec nec efficitur quam. Morbi pellentesque euismod nisi sed laoreet. Nulla ac pulvinar lacus, id dignissim arcu. Integer aliquet arcu a dignissim mollis.
         </div>
         <div class="item-review__author">
           Алексей Н.
@@ -886,6 +886,7 @@ title: "Заголовок | Проект",
     </div>
   </section>
 
+
   <section class="main-page__questions-form questions-form-block">
     <div class="questions-form-block__inner">
       <div class="questions-form-block__info">
@@ -902,15 +903,18 @@ title: "Заголовок | Проект",
           <input type="text"
                  placeholder="Ваш номер телефона"
                  class="questions-form__field">
-          <button type="button" class="questions-form__btn">Позвоните мне!</button>
-          <div class="questions-form__agree">
-            Здесь согласие)))
-          </div>
+          <button type="button"
+                  class="questions-form__btn">Позвоните мне!
+          </button>
+        </div>
+        <div class="questions-form__agree">
+          Здесь согласие)))
         </div>
       </div>
     </div>
-
   </section>
+
+
 </div>
 
 
